[package]
name = "valhalla_limit_order_book"
version = "0.1.0"
edition = "2024"

[dependencies]
anyhow = "1.0.99"
async-trait = "0.1.89"
axum = "0.8.4"
log = "0.4.27"
serde = {version = "1.0.219", features = ["derive", "std"]}
simple_logger = "5.0.0"
tokio = { version = "1.47.1", features = ["full"] }
